--- a/gallery.html
+++ b/gallery.html
@@ -24,18 +24,29 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" alt="" />
+					<img src="images/logo.png" alt="Logo Parroquia Espíritu Santo" />
 				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-rs-food" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-rs-food"
+					aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbars-rs-food">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-						<li class="nav-item"><a class="nav-link" href="menu.html">Nosotros</a></li>
-						<li class="nav-item active"><a class="nav-link" href="gallery.html">Galeria</a></li>
-						<li class="nav-item "><a class="nav-link" href="stuff.html">Sacerdotes</a></li>
-						<li class="nav-item "><a class="nav-link" href="blog.html">Calendario</a></li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="QuienesSomos.html" id="dropdown-quienes-somos" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Quiénes somos?</a>
+							<div class="dropdown-menu" aria-labelledby="dropdown-quienes-somos">
+								<a class="dropdown-item" href="QuienesSomos.html#historia">Historia</a>
+								<a class="dropdown-item" href="QuienesSomos.html#estructura">Estructura</a>
+								<a class="dropdown-item" href="QuienesSomos.html#grupos">Grupos</a>
+								<a class="dropdown-item" href="QuienesSomos.html#sacerdotes">Sacerdotes</a>
+							</div>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="servicios.html">¿Qué hacemos?</a></li>
+						<li class="nav-item active"><a class="nav-link" href="gallery.html">Galería</a></li>
+						<li class="nav-item"><a class="nav-link" href="blog.html">Calendario</a></li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Contáctanos</a></li>
 					</ul>
 				</div>
